ADM  - updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ public/.sourcemaps/main.js.map
 public/www/build/main.js
 public/www/build/main.js.map
 public/www/build/vendor.js.map
+public/www/build/3.js.map
+public/www/build/3.js
+public/www/build/.ion-diagnostic-typescript.html
