--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /public/node_modules
 /server/node_modules
 /node_modules
+public/www/build/1.js.map
+public/www/build/1.js
+public/www/build/.ion-diagnostic-typescript.html
