--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /public/www/build/3.js.map
 /public/www/build/3.js
 /public/www/build/.ion-diagnostic-typescript.html
+/public/www/build/main.js
+/public/www/build/main.js.map
