--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,36 @@
-/public/node_modules
-/server/node_modules
-public/www/build/main.js
-	public/www/build/main.js.map
+# Specifies intentionally untracked files to ignore when using Git
+# http://git-scm.com/docs/gitignore
+
+*~
+*.sw[mnpcod]
+*.log
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+.vscode/
+npm-debug.log*
+
+.idea/
+.sourcemaps/
+.sass-cache/
+.tmp/
+.versions/
+coverage/
+dist/
+node_modules/
+tmp/
+temp/
+hooks/
+platforms/
+plugins/
+plugins/android.json
+plugins/ios.json
+public/www/
+$RECYCLE.BIN/
+public/node_modules
+server/node_modules
+.DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
