--- a/.gitignore
+++ b/.gitignore
@@ -12,25 +12,25 @@ log.txt
 .vscode/
 npm-debug.log*
 
-.idea/
-.sourcemaps/
-.sass-cache/
-.tmp/
-.versions/
-coverage/
-dist/
-node_modules/
-tmp/
-temp/
-hooks/
-platforms/
-plugins/
-plugins/android.json
-plugins/ios.json
+public/.idea/
+public/.sourcemaps/
+public/.sass-cache/
+public/.tmp/
+public/.versions/
+public/coverage/
+public/dist/
+public/node_modules/
+public/tmp/
+public/temp/
+public/hooks/
+public/platforms/
+public/plugins/
+public/plugins/android.json
+public/plugins/ios.json
 public/www/
 $RECYCLE.BIN/
 public/node_modules
 server/node_modules
 .DS_Store
-Thumbs.db
-UserInterfaceState.xcuserstate
+public/Thumbs.db
+public/UserInterfaceState.xcuserstate
