--- a/public/package.json
+++ b/public/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
+    "@ionic-native/native-geocoder": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-nativegeocoder": "^3.1.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
@@ -34,7 +37,14 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "@types/googlemaps": "^3.30.8",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-nativegeocoder": {}
+    }
+  }
 }
